<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Intern002 Locket App</string>
    <!-- Language -->
    <string name="language_screen_title">Choose the language</string>
    <string name="language_screen_subtitle">Select your preferred language below.\nThis helps us serve you better.</string>
    <string name="you_selected">You Selected</string>
    <string name="no_language_selected">No language selected yet</string>
    <string name="all_languages">All Languages</string>
    <string name="search_hint">Search</string>
    <string name="no_results_for">No results for \"%1$s\"</string>
    <string name="get_started">Get Started</string>

    <!-- Onboarding -->
    <string name="onboarding1_title">Welcome to HushCam 💕</string>
    <string name="onboarding1_subtitle">Share real time photos with your favorite people — right on your home screen.</string>
    <string name="onboarding2_title">Closer Than You Think 💫</string>
    <string name="onboarding2_subtitle">Even miles apart, a single moment can make hearts feel near.</string>
    <string name="onboarding3_title">Moments That Speak 💬</string>
    <string name="onboarding3_subtitle">Send a quick message or emoji to keep the moment alive and fun.</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Home -->
    <string name="title_app">HushCam</string>
    <string name="text_friends_sample">10 Friends</string>
    <string name="text_zoom_1x">1x</string>
    <string name="text_shutter_instruction">Tap for photo, hold for video</string>
    <string name="text_history">History</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="extensions">Extensions</string>
    <string name="everyone">Everyone</string>
    <string name="edit">Edit</string>
    <string name="hushcam_premium">HushCam Premium</string>
    <string name="change_app_icon">Change app icon</string>
    <string name="premium">Premium</string>
    <string name="camera_theme">Camera theme</string>
    <string name="app_settings">App Settings</string>
    <string name="widget_setup_guide">Widget Setup Guide</string>
    <string name="language">Language</string>
    <string name="overview">Overview</string>
    <string name="change_birthday">Change Birthday</string>
    <string name="change_name">Change Name</string>
    <string name="edit_profile_photo">Edit profile photo</string>
    <string name="change_email_address">Change Email Address</string>
    <string name="privacy_security">Privacy &amp; Security</string>
    <string name="blocked_accounts">Blocked Accounts</string>
    <string name="send_read_receipts">Send Read Receipts</string>
    <string name="show_activity_status">Show activity status</string>
    <string name="message_notifications">Message Notifications</string>
    <string name="support">Support</string>
    <string name="report_problem">Report a Problem</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="account_management">Account Management</string>
    <string name="delete_account">Delete Account</string>
    <string name="log_out">Log Out</string>
    <string name="logout_dialog_title">Log Out?</string>
    <string name="logout_dialog_message">Are you sure you want to log out?</string>
    <string name="logout_dialog_ok">Log Out</string>
    <string name="logout_dialog_cancel">Cancel</string>

    <!-- Friends -->
    <string name="friend_list">Friend List</string>
    <string name="search_for_friends_to_add">Search for friends to add!</string>
    <string name="add_a_new_friend">Add a new friend</string>
    <string name="find_friends_from_other_apps">Find friends from other apps</string>
    <string name="messenger">Messenger</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="more">More</string>
    <string name="your_friends">Your Friends</string>
    <string name="suggestions_count">Suggestions (Your Friends %1$d / %2$d)</string>
    <string name="your_friends_count">Your Friends (%1$d / %2$d)</string>
    <string name="add_friends">Add Friends</string>
    <string name="friends_added_count">%1$d / %2$d friends added</string>
    <string name="suggestions">Suggestions</string>
    <string name="continue_button">Continue</string>
    <string name="button_save">Save</string>

    <!-- Login -->
    <string name="login_headline">Let\'s Get Started!</string>
    <string name="login_subhead">Step in and start sharing your moments.</string>
    <string name="login_button_facebook">Continue with Facebook</string>
    <string name="login_button_google">Continue with Google</string>
    <string name="login_prompt_text">Have an account?</string>
    <string name="login_action_text">Log in</string>
    <string name="signup_action_text">Sign up</string>
    <string name="login_prompt_full">Have an account? Log in or Sign up</string>
    <string name="login_footer_links">Terms of Use      |      Privacy Policy      |      Restore</string>
    <string name="email_headline">Enter your email</string>
    <string name="email_hint">Enter your email here</string>
    <string name="terms_and_privacy_notice">By tapping Continue, you agree to our Terms of Service and Privacy Policy.</string>
    <string name="button_continue">Continue</string>
    <string name="pass_headline">Enter your password</string>
    <string name="pass_hint"> Enter your password here</string>
    <string name="avaivalable">Avaivalable!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="content_desc_back_button">Back</string>
    <string name="password_reset_email">A password reset email has been sent.</string>
    <string name="username_hint">Enter username here</string>
    <string name="password_incorrect_error">Incorrect password.</string>
    <string name="password_length_error">Password must be between 8 and 18 characters.</string>

    <!-- Caption -->
    <string name="default_web_client_id" translatable="false">
         683081082714-hko4tbl5sdd8uu85hb5sq7hmsu87jneg.apps.googleusercontent.com
     </string>
    <string name="edit_header_send_to">Send to…</string>
    <string name="edit_caption_hint">Add a message..</string>
    <string name="caption_sheet_title">Caption</string>
    <string name="caption_section_general">General</string>
    <string name="caption_option_text">Text</string>
    <string name="caption_option_weather">Weather</string>
    <string name="caption_option_location">Location</string>
    <string name="caption_option_time_placeholder">1:40 PM</string>


    <!-- Change -->
    <string name="email_change_headline">Change your email</string>
    <string name="username_change_headline">Change your username</string>
    <string name="invalid_username_error">No change detected. Please enter a new username.</string>
    <string name="change_birthday_headline">Change your birthday</string>
    <string name="invalid_email_error">Email address already exists.</string>
    <string name="invalid_birthday_error">No change detected. Please select a new birthday.</string>
    <string name="username_changed_successfully">Username changed successfully!</string>
    <string name="birthday_changed_successfully">Birthday changed successfully!</string>


</resources>