<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ui.screen.language.LanguageFragment">

    <TextView
        android:id="@+id/tv_choose_language_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="38dp"
        android:text="@string/language_screen_title"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_choose_language_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:text="@string/language_screen_subtitle"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_choose_language_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_language_title" />

    <!-- Selected -->
    <TextView
        android:id="@+id/tv_you_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/you_selected"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_choose_language_subtitle"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_language_subtitle" />

    <LinearLayout
        android:id="@+id/card_selected_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_selected"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="5dp"
        app:layout_constraintEnd_toEndOf="@id/tv_choose_language_subtitle"
        app:layout_constraintStart_toStartOf="@id/tv_you_selected"
        app:layout_constraintTop_toBottomOf="@id/tv_you_selected">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_selected_flag"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="13dp"
            android:visibility="gone"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
            tools:src="@drawable/ic_flag_placeholder"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/tv_selected_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/no_language_selected"
            android:textColor="#B0B0B0"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_check"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_check"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_all_languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/all_languages"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/card_selected_language"
        app:layout_constraintTop_toBottomOf="@id/card_selected_language" />

    <!-- Search + List -->
    <LinearLayout
        android:id="@+id/container_language_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_list"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_all_languages"
        app:layout_constraintBottom_toTopOf="@+id/btn_get_started"
        app:layout_constraintStart_toStartOf="@id/tv_all_languages"
        app:layout_constraintEnd_toEndOf="@id/card_selected_language">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/bg_search_box"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="12dp"
            android:hint="@string/search_hint"
            android:paddingHorizontal="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="#888888"
            android:inputType="text"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/tv_no_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:textColor="#B0B0B0"
            android:textSize="16sp"
            android:visibility="gone"
            tools:text="No results for Russian"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_languages"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:scrollbars="vertical"
            tools:listitem="@layout/item_language" />

    </LinearLayout>

    <!-- Button Started  -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_get_started"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@null"
        app:backgroundTint="@null"
        android:background="@drawable/bg_button"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:enabled="false"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/container_language_list"
        app:layout_constraintStart_toStartOf="@id/container_language_list" />

</androidx.constraintlayout.widget.ConstraintLayout>